# markcollab-backend-core

./: .gitignore  Cargo.toml  README.md  \
src/: database.rs  main.rs  message.rs  room.rs  user.rs
src/broadcast_provider/: broadcast.rs  mod.rs  protocol.rs
