[package]
name = "markcollab-backend-core"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
futures = "0.3.31"
http = "1.2.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.24.0"
warp = "0.3.7"
